# dbus-cxx-testprogs

./: Makefile  receive.cpp  send.cpp
avahi/: CMakeLists.txt  avahi-test.cpp  avahitester.cpp  avahitester.h  org.freedesktop.Avahi.AddressResolver.xml  org.freedesktop.Avahi.DomainBrowser.xml  org.freedesktop.Avahi.HostNameResolver.xml  org.freedesktop.Avahi.RecordBrowser.xml  org.freedesktop.Avahi.ServiceBrowser.xml  org.freedesktop.Avahi.ServiceTypeBrowser.xml
compile_adapter/: CMakeLists.txt  compile-test.cpp  some_interface.cpp  some_interface.h  some_interfaceInterface.cpp  some_interfaceInterface.h  some_nameAdapter.cpp  some_nameAdapter.h
compile_proxy/: AvahiServerProxy.cpp  AvahiServerProxy.h  CMakeLists.txt  NONAMEProxy.cpp  NONAMEProxy.h  SimpleTypesProxy.cpp  SimpleTypesProxy.h  compile-test.cpp  org_freedesktop_Avahi_Server.cpp  org_freedesktop_Avahi_Server.h  org_freedesktop_Avahi_Server2.cpp  org_freedesktop_Avahi_Server2.h  test_interface.cpp  test_interface.h
complex-data-resolve1/: CMakeLists.txt  main.cpp
properties/: CMakeLists.txt  properties.cpp
signal_handler/: Makefile  myData.cpp  myData.h  signalCollector.cpp  signalEmitter.cpp
